[tool.poetry]
name = "adv-mla-at3"
version = "0.1.0"
description = ""
authors = ["ssandeed <sareemsandeed@gmail.com>"]
readme = "README.md"
packages = [{include = "adv_mla_at3"}]

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "2.1.1"
jupyterlab = "3.6.3"
scikit-learn = "1.3.1"
seaborn = "0.13.0"
category_encoders = "2.6.2"
joblib = "1.3.2"
streamlit = "1.28.1"
tensorflow = "2.14.0"
keras = "2.14.0"
xgboost = "2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
